--- a/package.json
+++ b/package.json
@@ -6,18 +6,30 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --config config/webpack.dev.js",
-    "dev": "node config/dev-server"
+    "dev": "webpack-dev-server --inline --progress --config config/webpack.dev"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.0",
+    "eslint": "^5.10.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^4.0.0",
     "extract-loader": "^3.1.0",
     "file-loader": "^2.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "node-notifier": "^5.3.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "vue": "^2.5.20",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
@@ -30,6 +42,7 @@
   "dependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
-    "babel-loader": "^8.0.0-beta.0"
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-eslint": "^8.2.1"
   }
 }
